# pomodoro-tui

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .prettierrc  CMakeLists.txt  Doxyfile  LICENSE  README.md  flake.nix  justfile  main.cpp  treefmt.nix
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/: main.cpp  pomodoro.cpp  pomodoro.h
